# quick-error

./: .travis.yml  Cargo.toml  README.rst  index.html  search-index.js  vagga.yaml
examples/: backtrace.rs  context.rs
implementors/core/fmt/: trait.Debug.js
quick_error/: index.html  macro.quick_error.html  struct.Context.html  trait.ResultExt.html
src/: lib.rs
src/quick_error/: lib.rs.html
