[package]
name = "quick-error"
description = """
    A macro which makes error types pleasant to write.
"""
license = "MIT/Apache-2.0"
version = "2.0.1"
edition = "2018"
keywords = ["macro", "error", "type", "enum"]
authors = ["Paul Colomiets <paul@colomiets.name>", "Colin Kiegel <kiegel@gmx.de>"]
homepage = "http://github.com/tailhook/quick-error"
repository = "http://github.com/tailhook/quick-error"
documentation = "http://docs.rs/quick-error"
categories = ["rust-patterns"]
